Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/Sales_Projection__c.object-meta.xml
<CustomObject>
    <label>Sales Projection</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Sales Projection</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Projections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>