Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/Dealer_Network_Addition_3__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Network_Addition_3__c</fullName>
    <label>Dealer Network Addition 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>