Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/Dealer_Network_Addition__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Network_Addition__c</fullName>
    <label>Dealer Network Addition 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>