Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/Distributer__c.field-meta.xml
<CustomField>
    <fullName>Distributer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Projections</relationshipLabel>
    <relationshipName>Sales_Projections</relationshipName>
    <type>Lookup</type>
</CustomField>