Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/Month_1_Rs_in_Lac__c.field-meta.xml
<CustomField>
    <fullName>Month_1_Rs_in_Lac__c</fullName>
    <label>Month 1 Rs. In Lacks</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>