Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/Month_4_Rs_In_Lacks__c.field-meta.xml
<CustomField>
    <fullName>Month_4_Rs_In_Lacks__c</fullName>
    <label>Month 4 Rs. In Lacks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>