Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Sanitary</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>