Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/X1st_Year__c.field-meta.xml
<CustomField>
    <fullName>X1st_Year__c</fullName>
    <label>1st Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>