Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/X2nd_Year__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Year__c</fullName>
    <label>2nd Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>