Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/fields/X3rd_Year__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Year__c</fullName>
    <label>3rd Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>