Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/recordTypes/Billing_Commitment.recordType-meta.xml
<RecordType>
    <fullName>Billing_Commitment</fullName>
    <active>true</active>
    <label>Billing Commitment</label>
</RecordType>