Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/recordTypes/Dealer_Network_Addition.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Network_Addition</fullName>
    <active>true</active>
    <label>Dealer Network Addition</label>
</RecordType>