Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/recordTypes/Sales_Planning.recordType-meta.xml
<RecordType>
    <fullName>Sales_Planning</fullName>
    <active>true</active>
    <label>Sales Planning</label>
</RecordType>