Partial_14Dec2021/force-app/main/default/objects/Sales_Projection__c/recordTypes/Sales_Projection.recordType-meta.xml
<RecordType>
    <fullName>Sales_Projection</fullName>
    <active>true</active>
    <label>Sales Projection</label>
</RecordType>